<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="record"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_record"
        android:shortcutShortLabel="@string/shortcut_record_short"
        android:shortcutLongLabel="@string/shortcut_record_long">

        <intent
            android:action="app.offlinetranscriber.mobile.action.RECORD"
            android:targetPackage="app.offlinetranscriber.mobile"
            android:targetClass="app.offlinetranscriber.mobile.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="import_audio"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_import"
        android:shortcutShortLabel="@string/shortcut_import_short"
        android:shortcutLongLabel="@string/shortcut_import_long">

        <intent
            android:action="app.offlinetranscriber.mobile.action.IMPORT_AUDIO"
            android:targetPackage="app.offlinetranscriber.mobile"
            android:targetClass="app.offlinetranscriber.mobile.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="queue"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_queue"
        android:shortcutShortLabel="@string/shortcut_queue_short"
        android:shortcutLongLabel="@string/shortcut_queue_long">

        <intent
            android:action="app.offlinetranscriber.mobile.action.OPEN_QUEUE"
            android:targetPackage="app.offlinetranscriber.mobile"
            android:targetClass="app.offlinetranscriber.mobile.MainActivity" />
    </shortcut>

</shortcuts>
